<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.proyecto.afinal.controlganadero.LoginActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:src="@drawable/vaca"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_gravity="center"
        android:id="@+id/eLusername"

        android:textColor="@color/black"
        android:textColorHint="@color/black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:id="@+id/eLpassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"/>


    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:hint="@string/iniciarSes"
        android:layout_gravity="center"
        android:id="@+id/bLlogin"
        android:background="@color/proyecto"
        android:layout_marginBottom="10dp"

        android:textColor="@color/black"
        android:textColorHint="@color/white"
        />
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
  <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginLeft="10dp"
     android:text="@string/registrous"/>
  <Button
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:hint="@string/registro"
      android:layout_marginRight="130dp"
      android:id="@+id/bLregister"
      android:background="@color/proyecto"
      android:textColor="@color/black"
      android:textColorHint="@color/white"
      />
 </LinearLayout>


</LinearLayout>
